Final attempt to fix the light/dark mode issue

--- a/css/mainpage.css
+++ b/css/mainpage.css
@@ -3,6 +3,11 @@ html
   font-size: 16px; /* 1rem = 16px */
 }
 
+:root 
+{
+  color-scheme: light only;
+}
+
 @font-face
 {
   font-family: "Jura";
@@ -114,17 +119,6 @@ header
 {
   color: white;
   opacity: 0.5;
-}
-
-.searchBar input,
-.searchBar input:focus,
-.searchBar input:hover,
-.searchBar input:active,
-.searchBar input:-webkit-autofill 
-{
-    border-color: white;
-    background-color: black;
-    color: white;
 }
 
 /* Suggestion box */
@@ -517,35 +511,3 @@ footer
     text-align: center;
   }
 }
-
-@media (prefers-color-scheme: dark),
-       (prefers-color-scheme: light) 
-{
-    .mainTitle 
-    {
-      color: black !important;
-    }
-
-    .searchBar input 
-    {
-      border-color: white !important;
-      background-color: black !important;
-      color: white !important;
-    }
-}
-
-  .searchBar input,
-  .searchBar input:focus,
-  .searchBar input:hover,
-  .searchBar input:active,
-  .searchBar input:-webkit-autofill   
-  {
-    border-color: white !important;
-    background-color: black !important;
-    color: white !important;
-  }
-
-  .mainTitle 
-  {
-    color: black !important;
-  }
